--- a/Services/neon-dashboard/Shared/Components/AlertCard.razor
+++ b/Services/neon-dashboard/Shared/Components/AlertCard.razor
@@ -1,4 +1,9 @@
-﻿<div class="py-2 px-4 space-x-1 rounded-4 flex w-full @CardStyle[Type] @(Body!= null ? "" : "items-center")">
+﻿@*-----------------------------------------------------------------------------
+// FILE:	      AlertCard.razor
+// CONTRIBUTOR: Simon Zhang
+// COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
+
+<div class="py-2 px-4 space-x-1 rounded-4 flex w-full @CardStyle[Type] @(Body!= null ? "" : "items-center")">
   @Left
   <div class="">
         @if (Title != "")
