--- a/Services/neon-dashboard/Pages/Home.razor
+++ b/Services/neon-dashboard/Pages/Home.razor
@@ -16,38 +16,34 @@
 <div class="container w-screen grid grid-cols-12 gap-3">
   <section class="col-span-8 space-y-2">
     <div>
-    <label class="text-4 text-slate-300 font-bold" >
+      <label class="text-4 text-slate-300 font-bold" >
         Current Cluster
-    </label>
-     <h1 class="text-8 mt-[-0.5rem] leading-tight">@clusterInfo.Name</h1>
-
+      </label>
+      <h1 class="text-8 mt-[-0.5rem] leading-tight">@clusterInfo.Name</h1>
     </div>
     <div class="flex space-x-6">
-      @if (clusterMetaData != null) {
-        foreach (KeyValuePair<string, string> data in clusterMetaData)
+      @if (clusterMetaData != null) 
       {
-      <div>
-        <label class="text-2 text-slate-300" >
-          @data.Key
-        </label>
-        <p class="text-4 leading-tight">@data.Value</p>
-      </div> 
+        foreach (KeyValuePair<string, string> data in clusterMetaData)
+        {
+          <div>
+            <label class="text-2 text-slate-300" >
+              @data.Key
+            </label>
+            <p class="text-4 leading-tight">@data.Value</p>
+          </div> 
+        }
       }
-      }
-
-  
     </div>
    
     <div class="w-full grid grid-cols-8 gap-3">
       <div class="col-span-2 bg-card rounded-4 py-2 flex flex-col justify-between ">
-
         <div class=" px-6 my-2">
           <LoadingCircle 
-            width="3.5" 
-            bgColor="text-slate-700" 
-            color="text-[#14D46C]" 
-            progress=@(AppState.Kube.Nodes != null ?  ((double)AppState.Kube.ActiveNodes / (double)AppState.Kube.TotalNodes) : 0)
-          >
+            Width="3.5" 
+            BackgroundColor="text-slate-700" 
+            Color="text-[#14D46C]" 
+            Progress=@(AppState.Kube.Nodes != null ?  ((double)AppState.Kube.ActiveNodes / (double)AppState.Kube.TotalNodes) : 0)>
             <div class="text-center text-5 text-slate-50 font-bold leading-tight">
         
                  @if (AppState.Kube.Nodes != null)
@@ -68,72 +64,45 @@
         <div class="flex flex-col mt-2 py-2 px-4 bg-slate-900 mx-2 rounded-2">
           <p class="text-4">
              @(AppState.Kube.Nodes != null ? AppState.Kube?.FailedNodes : "-")
-
           </p>
-        <label class="text-2 text-slate-300">
-          failed nodes
-        </label>
-          </div>
-       
-    
+          <label class="text-2 text-slate-300">
+            failed nodes
+          </label>
+        </div>
       </div>
       <div class="grid grid-cols-1 col-span-6 bg-card rounded-4 py-2 space-y-2 divide-y divide-slate-500">
         <div class="px-3 ">
             <label class="text-2 text-slate-300">Memory</label>
-            @if (memoryChartConfig != null)
-            {
-              <div id="header" class="w-1/2 h-auto">
-                      <Chart Config="memoryChartConfig" @ref="memoryChart"></Chart>
-                  </div>
-    
-            }
-            
+              @if (memoryChartConfig != null)
+              {
+                <div id="header" class="w-1/2 h-auto">
+                  <Chart Config="memoryChartConfig" @ref="memoryChart"></Chart>
+                </div>
+              }
         </div>
         <div class="px-3 ">
-            <label class="text-2 text-slate-300">CPU</label>
+          <label class="text-2 text-slate-300">CPU</label>
             @if (cpuChartConfig != null)
-        {
-            <div id="header" class="w-1/2 h-auto">
+            {
+              <div id="header" class="w-1/2 h-auto">
                 <Chart Config="cpuChartConfig" @ref="cpuChart"></Chart>
-            </div>
-        }
+              </div>
+            }
         </div>
         <div class="px-3 ">
             <label class="text-2 text-slate-300">Utilization</label>
             @if (diskChartConfig != null)
-        {
-            <div id="header" class="w-1/2 h-auto">
-                <Chart Config="diskChartConfig" @ref="diskChart"></Chart>
-            </div>
-        }
-
-
+            {
+                <div id="header" class="w-1/2 h-auto">
+                    <Chart Config="diskChartConfig" @ref="diskChart"></Chart>
+                </div>
+            }
         </div>
-    
-
       </div>
     </div>
  
   </section>
-
    <div class="col-start-10 col-end-[-1]">
-     <Alerts demoTimeStamp=@(clusterInfo!= null ? clusterInfo.CreationTimestamp : null) />
+     <Alerts DemoTimeStamp=@(clusterInfo!= null ? clusterInfo.CreationTimestamp : null) />
   </div>
- 
-
-
-
-
 </div>
-
-
-
-
-
-@if (diskChartConfig != null)
-{
-    <div id="header" style="width:500px;">
-        <Chart Config="diskChartConfig" @ref="diskChart"></Chart>
-    </div>
-}
-
