--- a/Services/neon-dashboard/Shared/Components/BottomMenu.razor
+++ b/Services/neon-dashboard/Shared/Components/BottomMenu.razor
@@ -1,4 +1,7 @@
-﻿
+﻿@*-----------------------------------------------------------------------------
+// FILE:	      BottomMenu.razor
+// CONTRIBUTOR: Simon Zhang
+// COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
 <DropUp Title="Dashboard" Active=@AppState.GetCurrentDashboard(AppState.CurrentDashboard) Icon=@Icons.Server Items=@AppState.Dashboards >
      <DropList Context="dashboard">
@@ -10,5 +13,5 @@
 </DropUp>
 
 <div class="button">
-		<Icon content=@Icons.Settings />
+		<Icon Content=@Icons.Settings />
 </div>
