--- a/Services/neon-dashboard/Pages/_Layout.cshtml
+++ b/Services/neon-dashboard/Pages/_Layout.cshtml
@@ -28,6 +28,8 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
 </body>
