fixed some headers

--- a/Services/neon-dashboard/Shared/Components/Icon.razor
+++ b/Services/neon-dashboard/Shared/Components/Icon.razor
@@ -1,3 +1,8 @@
+@*//-----------------------------------------------------------------------------
+// FILE:	    Icon.razor
+// CONTRIBUTOR: Simon Zhang
+// COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
+
 @using System.Text.Json;
 @using System.IO;
 @using System; 
