--- a/Services/neon-dashboard/Pages/Home.razor
+++ b/Services/neon-dashboard/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@*-----------------------------------------------------------------------------
-// FILE:	    Index.razor
+// FILE:	    Home.razor
 // CONTRIBUTOR: Marcus Bowyer
 // COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
 
