--- a/Services/neon-dashboard/Shared/Components/SegmentTracker.razor
+++ b/Services/neon-dashboard/Shared/Components/SegmentTracker.razor
@@ -1,1 +1,4 @@
-﻿
+﻿@*//-----------------------------------------------------------------------------
+// FILE:	    SegmentTracker.razor
+// CONTRIBUTOR: Marcus Bowyer
+// COPYRIGHT:   Copyright (c) 2005-2022 by neonFORGE LLC.  All rights reserved.*@
