dashboards are now CRDs

--- a/Services/neon-dashboard/Pages/Index.razor
+++ b/Services/neon-dashboard/Pages/Index.razor
@@ -14,7 +14,7 @@
   <div class="dashboard-container">
   @foreach (var dashboard in AppState.DashboardFrames)
   {
-      <Dashboard Id="@dashboard.Id" Name="@dashboard.Name" Uri="@dashboard.Uri" />
+      <Dashboard Id="@dashboard.Id" Name="@dashboard.Name" Url="@dashboard.Url" />
   }
   </div>
 }
