--- a/Services/neon-dashboard/Shared/Alerts.razor
+++ b/Services/neon-dashboard/Shared/Alerts.razor
@@ -11,6 +11,17 @@
         <p class="text">The cluster looks healthy</p>
       </ChildContent>
     </AlertCard>
+        @if (!(AppState.Kube.KubeCertExpiration == default))
+        {
+            <AlertCard Title="Kubernetes Cert Valid" >
+              <Left>
+                <Icon Content=@Icons.Smile />
+              </Left>
+              <ChildContent>
+                <p class="text">Expires: @AppState.Kube.KubeCertExpiration.ToLongDateString()</p>
+              </ChildContent>
+            </AlertCard>
+        }
   </div>
 
   <hr class="border-b border-slate-500 w-100" />
