fix merge issues in home.razor + change font to open source one

--- a/Services/neon-dashboard/Styles/Base/type.css
+++ b/Services/neon-dashboard/Styles/Base/type.css
@@ -3,22 +3,23 @@
 // CONTRIBUTOR: Simon Zhang
 // COPYRIGHT: Copyright (c) 2005-2022 by neonFORGE LLC. All rights reserved.*/
 
-@font-face {
-    font-family: "Pangram Sans";
-    src: url("../fonts/PPPangramSans-Medium.otf");
-    font-weight: normal;
-}
+
 
 @font-face {
-    font-family: "Pangram Sans";
-    src: url("../fonts/PPPangramSans-Bold.otf");
+    font-family: "Manrope";
+    src: url("../fonts/Manrope-Regular.woff2") format('woff2');
+    font-weight: normal;
+}
+@font-face {
+    font-family: "Manrope";
+    src: url("../fonts/Manrope-Bold.woff2") format('woff2');
     font-weight: bold;
 }
 
 
 body {
     font-size: var(--base);
-    font-family: "Pangram Sans", sans-serif;
+    font-family: "Manrope", sans-serif;
 }
 
 
