--- a/Services/neon-dashboard/Styles/Base/type.css
+++ b/Services/neon-dashboard/Styles/Base/type.css
@@ -12,7 +12,7 @@
 }
 @font-face {
     font-family: "Manrope";
-    src: url("../fonts/Manrope-Bold.woff2") format('woff2');
+    src: url("../fonts/Manrope-SemiBold.woff2") format('woff2');
     font-weight: bold;
 }
 
